--- a/src/main/resources/properties/env.properties
+++ b/src/main/resources/properties/env.properties
@@ -1,4 +1,5 @@
 #Enviornment
 cb.browser.name=chrome
+cb.base.url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 cb.user.name=admin
 cb.user.pass=admin@123
