--- a/src/main/resources/properties/env.properties
+++ b/src/main/resources/properties/env.properties
@@ -1,5 +1,5 @@
 #Enviornment
 cb.browser.name=chrome
 cb.base.url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-cb.user.name=admin
-cb.user.pass=admin@123
+cb.user.name=Admin
+cb.user.pass=admin123
