2 test case added

--- a/src/main/resources/properties/env.properties
+++ b/src/main/resources/properties/env.properties
@@ -3,3 +3,5 @@ cb.browser.name=chrome
 cb.base.url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 cb.user.name=Admin
 cb.user.pass=admin123
+cb.user.invalid.pass=*&^%$@#$%
+cb.general.wait.in.seconds=20
