--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,17 @@
             <artifactId>testng</artifactId>
             <version>7.7.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.2.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
